# codeai_fusion

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyrightconfig.json  sitemap.xml
.github/: FUNDING.yml
.stfolder/: syncthing-folder-ed0d77.txt
StartlearningUVpackage/: index.html
agentless_paradigm/: swebench_repo_structure.txt
building_crews/: basic_exec.py  managed_crew.py  prompt_agents.py  reader_tool.py  reading_json_csv.py  seq_coder_executor.py  tools_intro.py
building_crews/sqlcrew/: README.md  crewai_tools.md  pyproject.toml  requirements.txt
building_crews/sqlcrew/src/sqlcrew/tools/: custom_tool.py
coqui-tts/: test_tts.py
crews_flows/: requirements.txt
crews_flows/building_crews/dashboard_creation_for_slack_cases/: README.md  pyproject.toml
crews_flows/building_crews/dashboard_creation_for_slack_cases/src/dashboard_creation_for_slack_cases/: crew.py  main.py
crews_flows/building_crews/dashboard_creation_for_slack_cases/src/dashboard_creation_for_slack_cases/config/: agents.yaml  tasks.yaml
crews_flows/building_crews/whatsapp_chat_scraping/: README.md  pyproject.toml
crews_flows/building_crews/whatsapp_chat_scraping/src/whatsapp_chat_scraping/: crew.py  main.py
crews_flows/building_crews/whatsapp_chat_scraping/src/whatsapp_chat_scraping/config/: agents.yaml  tasks.yaml
docs/: StartlearningUVpackage.md  flask-mcp-compare.md  index.md  mcp_excel_server.md  mcp_notion_brain.md  mcp_reddit_server.md  vabired_docs.md  when_to_async.md
explore_scrpngai/: pyproject.toml  scrape_00.py
fastapi_sse/: pyproject.toml
fastmcp-reddit/: fastmcp_client.py  fastmcp_server.py  pyproject.toml  subred_data.txt
flask-mcp-compare/: README.md  flaskapp.py  index.html  mcpclient.py  mcpserver.py  requirements.txt
fw_ex/: task_ai_auto.py
fw_ex/praw_spiked/mcp-reddit-server/: client.py  client_01.py  pyproject.toml  server.py
mcp_excel_server/: exercise_data.xlsx  index.html  mcp_test.xlsx  mcpclient.py  multi_server_client.py  pyproject.toml  report_1951.md  server.py  test.xlsx
mcp_notion_brain/: index.html
mcp_reddit_server/: index.html
movie_py_explored/: add_script_subtitle.py  auto_transcript_extract.py  autoedit_trial.py  cutout_credits.py  get_script.py  quick_intro.py  scene_extraction.py  trailer.py
notion_brain_dump/: markdown2notion.py  mcpclient.py  pyproject.toml  server.py  (+1 more)
(+566 files in other folders)
