[project]
name = "whatsapp_chat_scraping"
version = "0.1.0"
description = "whatsapp_chat_scraping using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
whatsapp_chat_scraping = "whatsapp_chat_scraping.main:run"
run_crew = "whatsapp_chat_scraping.main:run"
train = "whatsapp_chat_scraping.main:train"
replay = "whatsapp_chat_scraping.main:replay"
test = "whatsapp_chat_scraping.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
